add a debug module

--- a/README
+++ b/README
@@ -1,12 +1,16 @@
+[![Build Status](https://travis-ci.org/ndevilla/iniparser.svg?branch=master)]
 # Comm Lib #
 
 A common lib for all C* project 
 
-cm_cfg
+# cm_cfg
 	a config file parse module
 
-cm_log
+# cm_log
 	a log module
 
-cm_shm
+# cm_shm
 	a system V shm tool module
+
+# cm_debug
+	a debug module
